# OneilSuggester

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  develop-pages.yml  test.yml
batch/: run_daily.py  update_stock_list.py
data/: stock_list.csv
docs/: index.html
docs/data/: 2026-05-03.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  (+6 more)
docs/develop/: index.html
docs/develop/data/: 2026-05-05.json  2026-06-07.json  2026-06-09.json  index.json  latest.json
src/: __init__.py  fetcher.py  indicators.py  scoring.py
src/patterns/: __init__.py  canslim_lite.py  cup_with_handle.py  short_sell.py
tests/: __init__.py  test_indicators.py  test_run_daily.py  test_scoring.py  test_update_stock_list.py
tests/patterns/: test_canslim_lite.py  test_cup_with_handle.py  test_short_sell.py
